--- a/core/framework/models/kineticRequest/Template.jspf
+++ b/core/framework/models/kineticRequest/Template.jspf
@@ -3,14 +3,14 @@
         public static final String FORM_NAME = "KS_SRV_SurveyTemplate";
 
         public static final String FIELD_ANONYMOUS_URL = "700002489";
-        public static final String FIELD_CATELOG = "600000500";
+        public static final String FIELD_CATALOG = "600000500";
         public static final String FIELD_DESCRIPTION = "700001010";
         public static final String FIELD_ID = "179";
         public static final String FIELD_NAME = "700001000";
         public static final String FIELD_DISPLAY_NAME = "700002298";
         public static final String[] FIELD_IDS = new String[]{
             FIELD_ID, FIELD_DESCRIPTION, FIELD_NAME, FIELD_ANONYMOUS_URL,
-            FIELD_DISPLAY_NAME};
+            FIELD_DISPLAY_NAME, FIELD_CATALOG};
 
         private SimpleEntry entry = null;
         private List<Category> categories = new ArrayList();
@@ -20,7 +20,7 @@
             Template result = null;
 
             String qualification =
-                "'"+FIELD_CATELOG+"' = \""+catalogName+"\" AND "+
+                "'"+FIELD_CATALOG+"' = \""+catalogName+"\" AND "+
                 "'"+FIELD_DISPLAY_NAME+"' = \""+displayName+"\"";
 
             SimpleEntry entry = ArsBase.findSingle(context, FORM_NAME, qualification, FIELD_IDS);
@@ -34,7 +34,7 @@
         public static Template[] findByCatalogName(HelperContext context, String catalogName) {
             Template[] results = new Template[0];
 
-            String qualification = "'"+FIELD_CATELOG+"' = \""+catalogName+"\"";
+            String qualification = "'"+FIELD_CATALOG+"' = \""+catalogName+"\"";
 
             SimpleEntry[] entries = ArsBase.find(context, FORM_NAME, qualification, FIELD_IDS);
             if (entries != null && entries.length > 0) {
@@ -51,7 +51,7 @@
             Template result = null;
 
             String qualification =
-                "'"+FIELD_CATELOG+"' = \""+catalogName+"\" AND "+
+                "'"+FIELD_CATALOG+"' = \""+catalogName+"\" AND "+
                 "'"+FIELD_ID+"' = \""+id+"\"";
 
             SimpleEntry entry = ArsBase.findSingle(context, FORM_NAME, qualification, FIELD_IDS);
@@ -125,7 +125,7 @@
 
             return anonymousUrl;
         }
-        public String getCatelog() {return entry.getEntryFieldValue(FIELD_CATELOG);}
+        public String getCatalog() {return entry.getEntryFieldValue(FIELD_CATALOG);}
         public String getDescription() {return entry.getEntryFieldValue(FIELD_DESCRIPTION);}
         public String getDisplayName() {return entry.getEntryFieldValue(FIELD_DISPLAY_NAME);}
         public String getId() {return entry.getEntryFieldValue(FIELD_ID);}
@@ -135,7 +135,7 @@
             StringBuilder builder = new StringBuilder();
             builder.append("{");
             builder.append("anonymousUrl: '").append(getAnonymousUrl()).append("'").append(",");
-            builder.append("catelog: '").append(getCatelog()).append("'").append(",");
+            builder.append("catalog: '").append(getCatalog()).append("'").append(",");
             builder.append("description: '").append(getDescription()).append("'").append(",");
             builder.append("id: '").append(getId()).append("'").append(",");
             builder.append("name: '").append(getName()).append("'");
