Resolves Bug #2096 - The displayHeadContent.jspf/reviewHeadContent.jspf should be loaded last

--- a/core/interface/fragments/applicationHeadContent.jspf
+++ b/core/interface/fragments/applicationHeadContent.jspf
@@ -4,10 +4,8 @@
     head content that is required for Kinetic SR to function normally.
 
     This includes dependencies such as the YUI css and javascript files that the
-    core application behavior depends upon, core Kinetic javascript files, any
-    css or javascript files attached to the current Kinetic SR form, the custom
-    header content of the current Kinetic SR form, and the javascript code used
-    to initialize the clientManager context.
+    core application behavior depends upon, core Kinetic javascript files, and 
+    the javascript code used to initialize the clientManager context.
 
     By default, this file includes the minified versions of javascript files.
     To include the expanded versions of these files, pass a debugjs=true
@@ -72,36 +70,6 @@
 <script type="text/javascript" src="<%=bundle.applicationPath() + "resources/js/kd_client.js"%>"></script>
 <% } else {%>
 <script type="text/javascript" src="<%=bundle.applicationPath() + "resources/js/kd_core.js"%>"></script>
-<% }%>
-
-<%--
-  CSS and Javascript - Custom Header Content
-    Include the custom header content if any has been specified within the
-    custom header content section of the Kinetic form defintion.
---%>
-<% if(!BundleHelper.isBlank(customerSurvey.getCustomHeaderContent())) { %>
-<!-- Custom Header Content -->
-<%= customerSurvey.getCustomHeaderContent() %>
-<% } %>
-
-<%--
-  CSS
-    Include the custom css file if one has been uploaded as an attachment to the
-    Kinetic form definition.
---%>
-<% if (!BundleHelper.isBlank(customerSurvey.getStylesheetFileName())) {%>
-<!-- Attached CSS Stylesheet File -->
-<link href="<%= customerSurvey.getStylesheetFileName().trim()%>" rel="stylesheet" type="text/css"/>
-<%}%>
-
-<%--
-  Javascript
-    Include the custom javascript file if one has been uploaded as an attachment
-    to the Kinetic form definition.
---%>
-<% if (!BundleHelper.isBlank(customerSurvey.getJavascriptFileName())) {%>
-<!-- Attached Javascript File -->
-<script type="text/javascript" src="<%= customerSurvey.getJavascriptFileName().trim()%>"></script>
 <% }%>
 
 <%--
