Resolving Refactor #2188 - Change the CustomerRequest#attribute methods to CustomerRequest#getAttribute and Enhancement #2169 - Add displayId accessors to customerRequest

--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -5,7 +5,7 @@
 --%>
 <%
     bundle.setProperty("companyName", "Kinetic Data");
-    bundle.setProperty("catalogName", customerRequest.catalogName());
+    bundle.setProperty("catalogName", customerRequest.getCatalogName());
 
     bundle.setProperty("homeUrl", bundle.applicationPath() + "DisplayPage?name=LoremPortal");
     bundle.setProperty("loginUrl", bundle.applicationPath() + "DisplayPage?name=LoremLogin");
