added styling to dynamic text elements, removed style when hovering over questions in review mode

--- a/packages/base/resources/css/display.css
+++ b/packages/base/resources/css/display.css
@@ -34,7 +34,9 @@ textarea {
     /* for IE 6/7 */
     zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");
 }
-
+.dynamicText {
+    padding: 10px 3px;
+}
 .subtitle {
     border-top: 1px solid #A1A1A1;
     color: #A1A1A1;
