--- a/core/interface/fragments/applicationHeadContent.jspf
+++ b/core/interface/fragments/applicationHeadContent.jspf
@@ -101,7 +101,7 @@
         clientManager.isAuthenticationRequired = '<%= customerSurvey.isAuthenticationRequired()%>';
         clientManager.isNewPage = <%=customerSurvey.getIsNewPage()%>;
         clientManager.maxCharsOnSubmit = <%=customerSurvey.getMaxCharsOnSubmit()%>;
-        clientManager.originatingPage = '<%=String.valueOf(UserContext.getOriginatingPage()).replaceAll("'", "\\\\'")%>';
+        clientManager.originatingPage = '<%=com.kd.kineticSurvey.impl.SurveyUtilities.encodeXMLContent(UserContext.getOriginatingPage())%>';
         clientManager.sessionId = '<%=customerSurvey.getCustomerSessionInstanceID()%>';
         clientManager.submitType = '<%=customerSurvey.getSubmitType()%>'
         clientManager.successMessage = '<%=String.valueOf(customerSurvey.getSuccessMessage()).replaceAll("'", "\\\\'")%><%=String.valueOf(UserContext.getSuccessMessage()).replaceAll("'", "\\\\'")%>';
