updated applicationHeadContent.jspf to encode clientManager.originatingPage using the org.apache.commons.lang3.StringEscapeUtils.escapeXml() method directly instead of using SurveyUtilities.encodeXmlContent().  This has the benefit for v5.0.4 users to just include the Apache Commons Lang library and not have to change any of the bundle files.

--- a/core/interface/fragments/applicationHeadContent.jspf
+++ b/core/interface/fragments/applicationHeadContent.jspf
@@ -101,7 +101,7 @@
         clientManager.isAuthenticationRequired = '<%= customerSurvey.isAuthenticationRequired()%>';
         clientManager.isNewPage = <%=customerSurvey.getIsNewPage()%>;
         clientManager.maxCharsOnSubmit = <%=customerSurvey.getMaxCharsOnSubmit()%>;
-        clientManager.originatingPage = '<%=com.kd.kineticSurvey.impl.SurveyUtilities.encodeXMLContent(UserContext.getOriginatingPage())%>';
+        clientManager.originatingPage = '<%=org.apache.commons.lang3.StringEscapeUtils.escapeXml(UserContext.getOriginatingPage())%>';
         clientManager.sessionId = '<%=customerSurvey.getCustomerSessionInstanceID()%>';
         clientManager.submitType = '<%=customerSurvey.getSubmitType()%>'
         clientManager.successMessage = '<%=String.valueOf(customerSurvey.getSuccessMessage()).replaceAll("'", "\\\\'")%><%=String.valueOf(UserContext.getSuccessMessage()).replaceAll("'", "\\\\'")%>';
