--- a/common/interface/fragments/headContent.jspf
+++ b/common/interface/fragments/headContent.jspf
@@ -17,6 +17,7 @@
     element before any package specific CSS, so it may be overriden with package
     specific styles.
 --%>
+<link rel="stylesheet" type="text/css" href="<%=bundle.bundlePath()%>common/resources/css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="<%=bundle.bundlePath()%>common/resources/css/common.css" />
 <!--[if IE 6]><link rel="stylesheet" type="text/css" href="<%=bundle.bundlePath()%>common/resources/css/common.ie6.css" /><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" type="text/css" href="<%=bundle.bundlePath()%>common/resources/css/common.ie7.css" /><![endif]-->
