--- a/packages/base/resources/css/login.css
+++ b/packages/base/resources/css/login.css
@@ -32,7 +32,7 @@
     padding: 5px;
 }
 #contentBody #loginBox .title {
-    background: #88A7C3 url('../../../../common/resources/images/background_blue_3B6E9C_88A7C3.png') repeat-x;
+    background-color: #88A7C3;
     border-bottom: 1px solid #3B6E9C;
     color: #FFFFFF;
     font-weight: bold;
@@ -40,7 +40,7 @@
     padding: 0 5px;
 }
 #contentBody #loginBox:hover .title {
-    background: #A0B9CE url('../../../../common/resources/images/background_light_blue_628BAF_A0B9CE.png') repeat-x;
+    background-color: #A0B9CE;
 }
 #contentHeader .userInfo {
     display: none;
