--- a/packages/base/resources/css/review.css
+++ b/packages/base/resources/css/review.css
@@ -21,22 +21,22 @@
  * be calculated properly if this is displayed in an iFrame in a service item.
  */
 #reviewContent #globalnav a {
-    background: url('../../../../common/resources/images/background_grey_A1A1A1_C6C6C6.png') repeat-x;
+    background: #C6C6C6;
     border: 1px solid #A1A1A1;
     color: white;
     line-height: 28px;
     padding: 0 5px;
 }
 #reviewContent #globalnav a:hover {
-    background: url('../../../../common/resources/images/background_light_grey_B4B4B4_D2D2D2.png') repeat-x;
+    background: #D2D2D2;
 }
 #reviewContent #globalnav a.selectedTab {
-    background: url('../../../../common/resources/images/background_blue_3B6E9C_88A7C3.png');
-    border: 1px solid #3B6E9C;
+    background: #88A7C3;
+    border-color: #3B6E9C;
 }
 #reviewContent #globalnav a.selectedTab:hover {
-    background: url('../../../../common/resources/images/background_light_blue_628BAF_A0B9CE.png');
-    border: 1px solid #628BAF;
+    background: #A0B9CE;
+    border-color: #628BAF;
 }
 
 /*
