--- a/packages/catalog/resources/css/catalog.css
+++ b/packages/catalog/resources/css/catalog.css
@@ -11,7 +11,7 @@
     border: 1px solid #628BAF;
 }
 #catalogContainer .categoryWrapper .category .name {
-    background: #88A7C3 url('../../../../common/resources/images/background_blue_3B6E9C_88A7C3.png') repeat-x;
+    background-color: #88A7C3;
     border-bottom: 1px solid #3B6E9C;
     color: #FFFFFF;
     font-weight: bold;
@@ -20,7 +20,7 @@
     padding: 0 10px;
 }
 #catalogContainer .categoryWrapper .category:hover .name {
-    background: #A0B9CE url('../../../../common/resources/images/background_light_blue_628BAF_A0B9CE.png') repeat-x;
+    background-color: #A0B9CE;
     border-bottom: 1px solid #628BAF;
 }
 #catalogContainer .categoryWrapper .category .description {
