--- a/common/resources/css/dialog.css
+++ b/common/resources/css/dialog.css
@@ -123,7 +123,7 @@
  * This style property is applied to an element that is placed around some
  * floating dialogs to give an appearance of a shadow.
  */
-.shadow {
+.kd-shadow {
     background-color: black;
     display: block;
     height: 100%;
