updated element for html5, added the latest jquery lib and added html5shiv

--- a/common/interface/fragments/contentHeader.jspf
+++ b/common/interface/fragments/contentHeader.jspf
@@ -1,6 +1,6 @@
 <div id="contentHeader">
     <a href="<%= bundle.getProperty("homeUrl")%>">
-        <img class="logo" src="<%= bundle.bundlePath()%>common/resources/images/logo.png"></img>
+        <img alt="<%= bundle.getProperty("companyName")%>" class="logo" src="<%= bundle.bundlePath()%>common/resources/images/logo.png"></img>
     </a>
     <% if (context != null) {%>
     <div class="userInfo">
