modified webAppContextPath js var to not end with slash

--- a/core/interface/fragments/applicationHeadContent.jspf
+++ b/core/interface/fragments/applicationHeadContent.jspf
@@ -107,6 +107,6 @@
         clientManager.successMessage = '<%=String.valueOf(customerSurvey.getSuccessMessage()).replaceAll("'", "\\\\'")%><%=String.valueOf(UserContext.getSuccessMessage()).replaceAll("'", "\\\\'")%>';
         clientManager.templateId = '<%=customerSurvey.getSurveyTemplateInstanceID()%>';
         clientManager.userName = '<%=String.valueOf(UserContext.getUserName()).replaceAll("'", "\\\\'")%>';
-        clientManager.webAppContextPath = '<%=bundle.applicationPath()%>';
+        clientManager.webAppContextPath = '<%=bundle.applicationPath().replaceAll("\\/\\z", "")%>';
     }
 </script>
