implemented BridgeBase.count

--- a/core/framework/includes/bundleInitialization.jspf
+++ b/core/framework/includes/bundleInitialization.jspf
@@ -36,6 +36,7 @@
 <%-- Include any lib files. --%>
 <%@include file="../lib/BridgeCall.jspf" %>
 <%@include file="../lib/BridgeList.jspf" %>
+<%@include file="../lib/BridgeCount.jspf" %>
 
 <%-- Include any helper files. --%>
 <%@include file="../helpers/BundleHelper.jspf" %>
